examples/test_package/history/steps/pl___robot_rough_run1/#test_results_result.txt
Error evaluating Problog model:
    result = action(s, pos)
             ^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 370, in _token_dot
    raise UnexpectedCharacter(s, pos)
problog.parser.UnexpectedCharacter: Unexpected character '.' at 30:81.% Problog Inference Result：
carrying(key,s(s(s(0)))) = 0.4812
at(robot,loc0,s(s(s(0)))) = 0.0100
at(key,loc0,s(s(s(0)))) = 0.0070
at(key,loc1,s(s(s(0)))) = 0.3000